k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: performance-api
  namespace: performance-platform

spec:
  replicas: 2

  selector:
    matchLabels:
      app: performance-api

  template:
    metadata:
      labels:
        app: performance-api

    spec:
      containers:
        - name: api
          image: ghcr.io/rithuraj6/devops-perfomance-api:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 10
            periodSeconds: 20
