k8s/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: performance-api
  namespace: performance-platform
  labels:
    app: performance-api

spec:
  type: ClusterIP

  selector:
    app: performance-api

  ports:
    - name: http
      port: 8000
      targetPort: 8000
