k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: performance-api-ingress
  namespace: performance-platform

spec:
  ingressClassName: nginx

  rules:
    - host: performance.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: performance-api
                port:
                  number: 8000
